<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.leebaeng.lbpushupcounter.presenter.HistoryFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presenter.HistoryFragment">

        <TextView
            android:id="@+id/txtHistoryMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/history_view_mode_30days"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/history_view_help"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHistoryMode"
             />

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/combinedChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutHistoryBottomNavigation"
            app:layout_constraintTop_toBottomOf="@+id/txtHelp" />

        <LinearLayout
            android:id="@+id/layoutHistoryBottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btnSwapGraphMode"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/history_view_mode_1year"
                android:textColor="?attr/colorOnPrimary"
                android:onClick="@{fragment::onClick}"
                />

            <TextView
                android:id="@+id/btnGoHome"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/history_view_btn_goHome"
                android:textColor="?attr/colorOnPrimary"
                android:onClick="@{fragment::onClick}"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>