<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="dialog"
            type="com.leebaeng.lbpushupcounter.presenter.dialog.CreateProfileDialog" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".presenter.MainFragment"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:text="환영 합니다!!\n시작하기 전 간단한 프로필을 작성해 주세요."
            />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_baseline_person_150"
            />

        <EditText
            android:id="@+id/edtNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_NickName"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/edtTargetCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_TargetCount"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/common_OK"
            android:textSize="20sp"
            android:onClick="@{dialog::onClick}"
            />

    </LinearLayout>
</layout>